quantadir = ${quanta_datadir}/scripts

quanta_DATA = scriptinfo.kmdr.info dwt.pl dwt.kmdr.info \
	tidy.kmdr.info checkxml.kmdr.info meinproc.kmdr.info \
	xmlval.kmdr.info xsltproc.kmdr.info htmlquickstart.kmdr.info \
	TemplateMagic.pl TemplateMagic.pl.info info.css externalpreview.sh \
	info.xsl externalpreview.sh.info dwt.pl.info gubed_install.kmdr.info 


execquantadir = ${quanta_datadir}/scripts

execquanta_SCRIPTS = scriptinfo.kmdr dwt.kmdr tidy.kmdr \
	checkxml.kmdr meinproc.kmdr  \
	xmlval.kmdr xsltproc.kmdr  \
	htmlquickstart.kmdr  \
	gubed_install.kmdr \
	listwizard.kmdr picturewizard.kmdr tablewizard.kmdr docbook_table.kmdr
