noinst_LTLIBRARIES = libtagdialogs.la

libtagdialogs_la_SOURCES = selectoreditors.ui cssselectoreditor.cpp csseditors.ui csseditor.cpp tagquicktableitem.cpp quicktable.ui tagmiscdlg.cpp tagmisc.ui listdlg.cpp tagmail.ui tagmaildlg.cpp filecombo.cpp tagquicklistdlg.cpp tagquicktable.cpp tagquicklistdlgdata.cpp tagdialog.cpp tagattr.cpp pictureview.cpp tagimgdlg.cpp tagxml.cpp tagwidget.cpp colorcombo.cpp tagquicktabledata.cpp tagimgdlgdata.cpp tableeditor.ui

libtagdialogs_la_LDFLAGS = -no-undefined

INCLUDES = $(all_includes)
METASOURCES = AUTO

