noinst_LTLIBRARIES = libtagdialogs.la

libtagdialogs_la_SOURCES = tagmisc.ui listdlg.cpp tagmail.ui tagmaildlg.cpp filecombo.cpp tagquicklistdlg.cpp tagquicklistdlgdata.cpp tagdialog.cpp tagattr.cpp pictureview.cpp tagimgdlg.cpp tagxml.cpp tagwidget.cpp colorcombo.cpp tagimgdlgdata.cpp tableeditor.ui

libtagdialogs_la_LDFLAGS = -no-undefined

INCLUDES = $(all_includes)
METASOURCES = AUTO

