noinst_LTLIBRARIES = libtagdialogs.la

libtagdialogs_la_SOURCES = tagmisc.ui listdlg.cpp tagmail.ui tagmaildlg.cpp filecombo.cpp tagquicklistdlg.cpp tagquicklistdlgdata.cpp tagdialog.cpp tagattr.cpp pictureview.cpp tagimgdlg.cpp tagxml.cpp tagwidget.cpp colorcombo.cpp tagimgdlgdata.cpp tableeditor.ui

libtagdialogs_la_LDFLAGS = -no-undefined

AM_CPPFLAGS = -I$(top_srcdir)/quanta -I$(top_srcdir)/quanta/parser -I$(top_srcdir)/quanta/parts/kafka $(all_includes)

METASOURCES = AUTO

