noinst_LIBRARIES = libtoolbar.a
libtoolbar_a_METASOURCES = AUTO
libtoolbar_a_SOURCES = toolbarxmlgui.cpp tagaction.cpp actionconfigdialog.cpp actionconfigdialog.h actionconfigdialogs.ui toolbartabwidget.cpp toolbartabwidget.h
INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/quanta/tagdialogs $(all_includes)
