noinst_LIBRARIES = libtoolbar.a

libtoolbar_a_SOURCES = toolbarxmlgui.cpp tagaction.cpp actionconfigdialog.cpp actionconfigdialog.h actionconfigdialogs.ui toolbartabwidget.cpp toolbartabwidget.h myprocess.h

libtoolbar_a_METASOURCES = AUTO

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/quanta/tagdialogs $(all_includes)
