noinst_LTLIBRARIES = libtoolbar.la

libtoolbar_la_SOURCES = toolbarxmlgui.cpp tagaction.cpp actionconfigdialog.cpp actionconfigdialogs.ui toolbartabwidget.cpp

METASOURCES = AUTO

AM_CPPFLAGS = -I$(top_srcdir)/quanta -I$(top_srcdir)/quanta/messages -I$(top_srcdir)/quanta/parts/kafka -I$(top_srcdir)/quanta/parser -I$(top_srcdir)/quanta/tagdialogs $(all_includes)
