noinst_LTLIBRARIES = libtreeviews.la

METASOURCES = AUTO

libtreeviews_la_SOURCES = uploadtreeview.cpp uploadtreefolder.cpp uploadtreefile.cpp fileinfodlg.ui quantapropertiespage.ui newtemplatedirdlg.cpp templatedirform.ui templatestreeview.cpp projecttreeview.cpp structtreeview.cpp doctreeview.cpp docitem.cpp docfolder.cpp structtreetag.cpp filestreeview.cpp tagattributetree.cpp tagattributeitems.cpp scripttreeview.cpp

INCLUDES = -I$(top_srcdir)/quanta -I$(top_srcdir)/quanta/dialogs $(all_includes) -I$(top_builddir)/quanta/dialogs -I$(top_builddir)/quanta/tagdialogs
noinst_HEADERS =  scripttreeview.h
