noinst_LTLIBRARIES = libtreeviews.la

METASOURCES = AUTO

libtreeviews_la_SOURCES = uploadtreeview.cpp uploadtreefolder.cpp uploadtreefile.cpp fileinfodlg.ui quantapropertiespage.ui newtemplatedirdlg.cpp templatedirform.ui templatestreeview.cpp projecttreeview.cpp structtreeview.cpp doctreeview.cpp docitem.cpp docfolder.cpp structtreetag.cpp filestreeview.cpp tagattributetree.cpp tagattributeitems.cpp scripttreeview.cpp

AM_CPPFLAGS = -I$(top_srcdir)/quanta -I$(top_srcdir)/quanta/project -I$(top_srcdir)/quanta/parts/kafka -I$(top_srcdir)/quanta/tagdialogs -I$(top_srcdir)/quanta/toolbar -I$(top_srcdir)/quanta/parser -I$(top_srcdir)/quanta/dialogs -I$(top_builddir)/quanta/dialogs -I$(top_builddir)/quanta/tagdialogs -I$(top_srcdir)/quanta/messages $(all_includes)
noinst_HEADERS =  scripttreeview.h
